Anchor Hover Effects Added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    </a>
       </div>
       <div class="androiddownload-container">
-        <a href="#" class="androidbtn"><img src="icon-android.svg" alt="appleicon" class="androidlogo">Android Download
+        <a href="#" class="androidbtn"><img src="icon-android.svg" alt="androidicon" class="androidlogo">Android Download
        </a>
           </div>
     </div>
@@ -66,9 +66,9 @@
   Have any problems? Contact us via social media or email us at <span>equalizer@example.com</span></p>
   </div>
   <div class="socialmediaicons">
-    <img src="icon-facebook.svg" alt="facebooklogo" class="facebookicon">
-    <img src="icon-instagram.svg" alt="facebooklogo" class="facebookicon">
-    <img src="icon-twitter.svg" alt="facebooklogo" class="facebookicon">
+    <a href="#"><img src="icon-facebook.svg" alt="facebooklogo" class="facebookicon"></a>
+    <a href="#"><img src="icon-instagram.svg" alt="facebooklogo" class="instagramicon"></a>
+    <a href="#"><img src="icon-twitter.svg" alt="facebooklogo" class="twittericon"></a>
   </div>
   </body>
 </html>
