--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
   Have any problems? Contact us via social media or email us at <span>equalizer@example.com</span></p>
   </div>
   <div class="socialmediaicons">
-    <a href="#"><img src="icon-facebook.svg" alt="facebooklogo" class="facebookicon"></a>
-    <a href="#"><img src="icon-instagram.svg" alt="facebooklogo" class="instagramicon"></a>
-    <a href="#"><img src="icon-twitter.svg" alt="facebooklogo" class="twittericon"></a>
+    <a href="xlink:#"><img src="icon-facebook.svg" alt="facebooklogo" class="facebookicon"></a>
+    <a href="xlink:#"><img src="icon-instagram.svg" alt="facebooklogo" class="instagramicon"></a>
+    <a href="xlink:#"><img src="icon-twitter.svg" alt="facebooklogo" class="twittericon"></a>
   </div>
   </body>
 </html>
